test/e2e/chainsaw/hybridgateway/httproute-method-matching/06-httproute-method-patch.yaml
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: ($httproute_name)
  namespace: ($kong_namespace)
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ($gateway_name)
  rules:
    - matches:
        - method: PATCH
          path:
            type: Exact
            value: /patch
      backendRefs:
        - name: httpbin
          port: 80
