test/e2e/chainsaw/hybridgateway/httproute-method-matching/12-httproute-multiple-methods.yaml
---
# HTTPRoute with multiple HTTP methods in a single rule
# This tests that multiple method matches in one rule work correctly
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: ($httproute_name)
  namespace: ($namespace)
  annotations:
    konghq.com/strip-path: "false"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ($gateway_name)
  rules:
    - matches:
        - method: GET
          path:
            type: PathPrefix
            value: /anything
        - method: POST
          path:
            type: PathPrefix
            value: /anything
        - method: PUT
          path:
            type: PathPrefix
            value: /anything
      backendRefs:
        - name: ($httpbin_deployment_name)
          port: ($httpbin_service_port)
