test/e2e/chainsaw/hybridgateway/httproute-method-matching/14-httproute-update-test-updated.yaml
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: ($httproute_name)
  namespace: ($namespace)
  annotations:
    konghq.com/strip-path: "false"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ($gateway_name)
  rules:
    - matches:
        - method: GET
          path:
            type: Exact
            value: /status/200
        - method: POST
          path:
            type: Exact
            value: /status/200
      backendRefs:
        - name: ($httpbin_deployment_name)
          port: ($httpbin_service_port)
